--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-image: url('image.JPG'); /* Path to your background image */
+    background-image: url('./image.jpg'); /* Path to your background image */
     background-size: cover; /* Ensures the image covers the whole background */
     background-position: center; /* Centers the background image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
